--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -212,7 +212,7 @@ onScroll();                                       // run once on load
           </span> -->
               <span onclick="window.open('{{ site.data.main_info.cv }}')"
                 style="cursor: pointer">
-                <i class="fa fa-download" aria-hidden="true"></i>
+                <i class="fa fa-file" aria-hidden="true"></i>
               </span>
               <!--          <span onclick="window.open('{{ site.data.main_info.semantic_scholar }}')" style="cursor: pointer">-->
               <!--            <i class="ai ai-semantic-scholar-square" aria-hidden="true"></i>-->
