--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600'
       rel='stylesheet' type='text/css'>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet">
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
